--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "chart.js": "^2.9.3",
+    "apexcharts": "^3.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0",
+    "vue-apexcharts": "^1.5.3",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.3.4"
