--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.1",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   }
