--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/howler": "^2.2.1",
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "howler": "^2.2.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-class-component": "^7.2.5",
