--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "howler": "^2.2.0",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
+    "vue-burger-menu": "^2.0.5",
     "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.4.3"
