--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "howler": "^2.2.0",
-    "vue": "^2.6.11",
+    "vue": "^2.7.7",
     "vue-apexcharts": "^1.6.0",
     "vue-burger-menu": "^2.0.5",
     "vue-class-component": "^7.2.5",
@@ -22,21 +22,20 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.23",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-eslint": "^4.5.3",
-    "@vue/cli-plugin-router": "^4.5.3",
-    "@vue/cli-plugin-typescript": "^4.5.3",
-    "@vue/cli-service": "^4.5.3",
-    "@vue/eslint-config-airbnb": "^5.1.0",
-    "@vue/eslint-config-typescript": "^5.0.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.20.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.2.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
-    "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
+    "typescript": "~4.5.5"
   }
 }
