--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-apexcharts": "^1.6.0",
     "vue-burger-menu": "^2.0.5",
     "vue-class-component": "^7.2.5",
+    "vue-material-design-icons": "^5.1.2",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.4.3"
   },
