--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host localhost",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -17,6 +17,7 @@
     "vue-apexcharts": "^1.6.0",
     "vue-burger-menu": "^2.0.5",
     "vue-class-component": "^7.2.5",
+    "vue-material-design-icons": "^5.1.2",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.4.3"
   },
