--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.20.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.2.0",
+    "netlify-cli": "^12.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
     "typescript": "~4.5.5"
